<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.jdmaestre.uninorte.barranquilla2go.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:hint="@string/username_hint"
        android:layout_marginTop="102dp"
        android:layout_below="@+id/subtitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray"
        android:inputType="text"/>
    <requestFocus/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:hint="@string/password_hint"
        android:layout_below="@+id/usernameField"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/darker_gray"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button_label"
        android:id="@+id/loginButton"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_standard"
        android:paddingBottom="5sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/singup_label"
        android:id="@+id/singUpText"
        android:textColor="@android:color/darker_gray"
        android:layout_below="@+id/twiterLoginButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:textSize="40sp"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/subtitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@android:color/darker_gray"
        />

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_below="@+id/singUpText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login with Twitter"
        android:id="@+id/twiterLoginButton"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button_twitter"
        android:textColor="#FFFFFF"
        android:paddingBottom="5sp"
        android:textStyle="bold"
        />

</RelativeLayout>
